objects/project_cloud__Allocation__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Allocation_Group__c</fullName>
        <label>Allocation Group</label>
        <referenceTo>project_cloud__Allocation_Group__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__End_Override__c</fullName>
        <label>End (Override)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <formula>IF(ISBLANK(project_cloud__End_Override__c), project_cloud__Allocation_Group__r.project_cloud__End__c, project_cloud__End_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Day__c</fullName>
        <formula>BLANKVALUE(project_cloud__Load_Override__c * project_cloud__Allocation_Group__r.project_cloud__Hours_Day__c,IF(AND(project_cloud__Allocation_Group__r.project_cloud__Balanced_Hours_Day__c &gt; 0.0, project_cloud__Allocation_Group__r.project_cloud__Total_Subscriptions__c &gt; 0),project_cloud__Allocation_Group__r.project_cloud__Balanced_Hours_Day__c / project_cloud__Allocation_Group__r.project_cloud__Total_Subscriptions__c, 0))</formula>
        <label>Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Override__c</fullName>
        <label>Hours (Override)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Week__c</fullName>
        <formula>project_cloud__Hours_Day__c * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Per Week (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <formula>/*(End__c - Start__c) * Hours_Day__c*/
project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Estimated_Hours__c * ( project_cloud__Load__c * (IF( ISBLANK(project_cloud__Allocation_Group__r.project_cloud__Load_Override__c), (project_cloud__Allocation_Group__r.project_cloud__Load__c *  project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Available_Load__c), project_cloud__Allocation_Group__r.project_cloud__Load__c) ) )</formula>
        <label>Hours (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load_Override__c</fullName>
        <label>Load (Override)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load_Score_1__c</fullName>
        <description>This is field is used for resource load calculations in the system, it should not be used for reporting or displayed to a user.</description>
        <formula>(project_cloud__Hours_Day__c / 8) * MIN(project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Working_Total__c, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Load Score 1 (System)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load_Score_2__c</fullName>
        <formula>(project_cloud__Hours_Day__c / 8) * MIN(project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Working_Total__c, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Load Score 2 (System)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Load_Override__c), (1 - project_cloud__Allocation_Group__r.project_cloud__Allocated_Override_Load__c) /  project_cloud__Allocation_Group__r.project_cloud__Total_Subscriptions__c, project_cloud__Load_Override__c)</formula>
        <label>Load (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Quick_Allocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quick Allocation</label>
        <referenceTo>project_cloud__Quick_Allocation__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start_Override__c</fullName>
        <label>Start (Override)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <formula>IF(ISNULL(project_cloud__Start_Override__c), project_cloud__Allocation_Group__r.project_cloud__Start__c, project_cloud__Start_Override__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <recordTypes>
        <fullName>project_cloud__Allocation</fullName>
        <active>true</active>
        <label>Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Subscription</fullName>
        <active>true</active>
        <label>Subscription</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>